overflow scrollbar uploadWork fix

--- a/src/widgets/uploadWorkModal/ui/uploadWorkModal.scss
+++ b/src/widgets/uploadWorkModal/ui/uploadWorkModal.scss
@@ -3,9 +3,10 @@
     width: 100%;
     width: 748px;
     box-sizing: border-box;
-    padding: 24px 16px;
+    padding: 24px 0;
 
     .uploadWorkModal_container{
+        // width: 100%;
         max-height: 800px;
         overflow-y: scroll;
         scrollbar-width: none; /* Firefox */
@@ -16,12 +17,16 @@
         }
 
         > .uploadWorkModal_heading{
-            font-weight: 700;
-            font-size: 20px;
-            line-height: 28px;
-            letter-spacing: 0%;
-            padding-bottom: 24px;
-            border-bottom: 1px #3B3B3B solid;
+            padding: 0 16px;
+
+            > .uploadWorkModal_heading_text{
+                font-weight: 700;
+                font-size: 20px;
+                line-height: 28px;
+                letter-spacing: 0%;
+                padding-bottom: 24px;
+                border-bottom: 1px #3B3B3B solid;
+            }
         }
 
         > .uploadWorkModal_description{
@@ -31,24 +36,30 @@
             font-size: 16px;
             line-height: 24px;
             letter-spacing: 0%;
+            padding: 0 16px;
         }
 
         > .uploadWorkModal_inputText{
+            padding: 0 16px 0 16px;
             margin-top: 16px;
-            padding-bottom: 16px;
-            border-bottom: 1px #3B3B3B solid;
+            
+            > div{
+                border-bottom: 1px #3B3B3B solid;
+                padding-bottom: 16px;
+            }
         }
 
         > .uploadWorkModal_media{
             margin-top: 16px;
-            border-bottom: #3B3B3B 1px solid;
-            padding-bottom: 24px;
+            padding: 0 16px;
 
             > .uploadWorkModal_media_mediaList{
                 margin-top: 16px;
                 display: grid;
                 grid-template-columns: 1fr 1fr 1fr;
                 gap: 16px;
+                padding-bottom: 24px;
+                border-bottom: #3B3B3B 1px solid;
             }
         }
 
@@ -58,6 +69,7 @@
             gap: 24px;
             align-items: center;
             justify-content: end;
+            padding: 0 16px;
         }
     }
 }
